@@ -18,6 +18,7 @@ Release 0.19.0 - Unreleased
    HBASE-853   [shell] Cannot describe meta tables (Izaak Rubin via Stack)
    HBASE-844   Can't pass script to hbase shell 
    HBASE-837   Add unit tests for ThriftServer.HBaseHandler (Izaak Rubin via Stack)
+   HBASE-913   Classes using log4j directly
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
